--- a/hard-coded/chart-types/3d-line/config.json
+++ b/hard-coded/chart-types/3d-line/config.json
@@ -1,6 +1,6 @@
 {
+    "description": "How to make 3D line plots in {language}.",
     "has_thumbnail": true,
     "name": "3D Line Plots",
-    "relative_url": "3d-line-plots",
-    "description": "How to make 3D line plots in {language}."
+    "relative_url": "3d-line-plots"
 }
