--- a/hard-coded/chart-types/3d-surface/config.json
+++ b/hard-coded/chart-types/3d-surface/config.json
@@ -1,6 +1,6 @@
 {
+    "description": "How to make 3D surface plots in {language}.",
     "has_thumbnail": true,
     "name": "3D Surface Plots",
-    "relative_url": "3d-surface-plots",
-    "description": "How to make 3D surface plots in {language}."
+    "relative_url": "3d-surface-plots"
 }
