--- a/hard-coded/config.json
+++ b/hard-coded/config.json
@@ -7,6 +7,8 @@
         "streaming",
         "layout",
         "file-settings",
-        "specialty"
+        "specialty",
+        "showcase",
+        "callbacks"
     ]
 }
