--- a/hard-coded/showcase/showcase-subsection-placeholder/config.json
+++ b/hard-coded/showcase/showcase-subsection-placeholder/config.json
@@ -1,5 +1,5 @@
 {
     "has_thumbnail": false,
     "name": "Showcase",
-    "relative_url": "javascript-graphing-library/showcase/"
+    "relative_url": "showcase"
 }
