--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -2,4 +2,4 @@ gems:
 - octopress-debugger
 
 staticurl: http://localhost:4000/all_static
-exclude: [_posts/ggplot2, _posts/julia, _posts/matlab, _posts/matplotlib, _posts/nodejs, _posts/plotly_js, _posts/python, _posts/r]
+exclude: [_posts/ggplot2, _posts/julia, _posts/matlab, _posts/matplotlib, _posts/nodejs, _posts/r] # [_posts/python,]
