--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,2 +1,6 @@
+gems:
+- jekyll-sitemap
+
+url: https://blahblah.com
 staticurl: http://localhost:4000/all_static
-exclude: [] # [_posts/python, _posts/julia, _posts/matlab, _posts/matplotlib, _posts/nodejs, _posts/r]
+exclude: [_posts/python, _posts/julia, _posts/matlab, _posts/matplotlib, _posts/nodejs, _posts/r]
