--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,5 @@ gems:
 
 url: https://plot.ly
 BASE_URL: https://plot.ly
+exclude: [_posts/julia, _posts/ggplot2, _posts/matplotlib, _posts/nodejs, _posts/r]
 staticurl: https://plot.ly/gh-pages/documentation/static/
