--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ gems:
 url: https://plot.ly
 BASE_URL: https://plot.ly
 staticurl: https://plot.ly/gh-pages/documentation/static/
-exclude: [_posts/temp]
+exclude: [_posts/temp, '*.Rmd',]
 
 kramdown:
   input: GFM
