--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,30 @@
-gems:
-- jekyll-redirect-from
-- jekyll-sitemap
+# gems:
+# - jekyll-redirect-from
+# - jekyll-sitemap
+#
+# url: https://plot.ly
+# BASE_URL: https://plot.ly
+# staticurl: https://plot.ly/gh-pages/documentation/static/
+# exclude: [_posts/temp, '*.Rmd',]
+#
+# offline_price: 249
+#
+# kramdown:
+#   input: GFM
+# markdown: redcarpet
+# redcarpet:
+#   extensions: ["tables", "fenced_code_blocks"]
 
-url: https://plot.ly
-BASE_URL: https://plot.ly
-staticurl: https://plot.ly/gh-pages/documentation/static/
-exclude: [_posts/temp, '*.Rmd',]
+staticurl: http://localhost:4000/all_static
+# all of the folders: ['*.Rmd',posts/ggplot2,_posts/julia,_posts/matlab,_posts/matplotlib,_posts/nodejs,_posts/plotly_js,_posts/python,_posts/r,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
+exclude: ['*.Rmd',_posts/ggplot2,_posts/julia,_posts/matplotlib,_posts/nodejs,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
+# all of the folders: [_posts/ggplot2,_posts/julia,_posts/matlab,_posts/matplotlib,_posts/nodejs,_posts/plotly_js,_posts/python,_posts/r,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
 
 offline_price: 249
 
 kramdown:
   input: GFM
+
 markdown: redcarpet
 redcarpet:
   extensions: ["tables", "fenced_code_blocks"]
