--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ staticurl: https://plot.ly/gh-pages/documentation/static/
 exclude: [_posts/temp, '*.Rmd',]
 
 offline_price: 249
+plotlyjs_download_url: http://d14fo0winaifog.cloudfront.net/plotlyjs_basic.zip
 
 kramdown:
   input: GFM
