--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,13 @@ gems:
 url: https://plot.ly
 BASE_URL: https://plot.ly
 staticurl: https://plot.ly/gh-pages/documentation/static/
-exclude: [_posts/temp]
+exclude: [_posts/temp, '*.Rmd',]
+
+offline_price: 249
+plotlyjs_download_url: http://d14fo0winaifog.cloudfront.net/plotlyjs_basic.zip
 
 kramdown:
   input: GFM
+markdown: redcarpet
+redcarpet:
+  extensions: ["tables", "fenced_code_blocks"]
