--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -2,10 +2,8 @@ gems:
 - jekyll-redirect-from
 
 staticurl: http://localhost:4000/all_static
-# all of the folders: ['*.Rmd',posts/ggplot2,_posts/julia,_posts/matlab,_posts/matplotlib,_posts/nodejs,_posts/plotly_js,_posts/python,_posts/r,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
-exclude: ['*.Rmd',_posts/ggplot2,_posts/julia,_posts/matplotlib,_posts/nodejs,_posts/plotly_js,_posts/matlab,_posts/tutorials,_posts/user_guide_r,_posts/user_guide_matlab,_posts/r]
-# exclude: ['*.Rmd',_posts/ggplot2,_posts/julia,_posts/matplotlib,_posts/nodejs,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
-# all of the folders: [_posts/ggplot2,_posts/julia,_posts/matlab,_posts/matplotlib,_posts/nodejs,_posts/plotly_js,_posts/python,_posts/r,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
+# all of the folders: ['*.Rmd',posts/pandas,posts/ggplot2,_posts/julia,_posts/matlab,_posts/matplotlib,_posts/nodejs,_posts/plotly_js,_posts/python,_posts/r,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
+exclude: ['*.Rmd',posts/pandas,posts/ggplot2,_posts/julia,_posts/matlab,_posts/matplotlib,_posts/nodejs,_posts/plotly_js,_posts/python,_posts/r,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
 
 offline_price: 249
 plotlyjs_download_url: http://d14fo0winaifog.cloudfront.net/plotlyjs_basic.zip
