--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ url: https://plot.ly
 BASE_URL: https://plot.ly
 staticurl: https://plot.ly/gh-pages/documentation/static/
 exclude: [_posts/temp, '*.Rmd',]
-imgurl: http://images.plot.ly/plotly-documentation/
+imgurl: https://images.plot.ly/plotly-documentation/
 
-plotlyjs_download_url: http://cdn.plot.ly/plotly-latest.min.js
+plotlyjs_download_url: https://cdn.plot.ly/plotly-latest.min.js
 
 kramdown:
   input: GFM
