--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@ gems:
 url: http://api.plotly.ineffable.co
 BASE_URL: http://api.plotly.ineffable.co
 staticurl: https://plot.ly/gh-pages/documentation/static/
+
+stylesheet:   https://s3-us-west-1.amazonaws.com/plotly-tutorials/assets/css/api/main.css
+
 exclude: [_posts/temp, '*.Rmd',]
 imgurl: https://images.plot.ly/plotly-documentation/
 
