--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,32 @@
-gems:
-- jekyll-redirect-from
-- jekyll-sitemap
-#- jemoji
+  gems:
+  - jekyll-redirect-from
+  - jekyll-sitemap
 
-url: http://api.plotly.ineffable.co
-BASE_URL: http://api.plotly.ineffable.co
-staticurl: https://plot.ly/gh-pages/documentation/static/
+# ---
+# Define URLs
+# ---
+  url: https://plot.ly
+  BASE_URL: https://plot.ly
+  staticurl: https://plot.ly/gh-pages/documentation/static/
 
-stylesheet:   https://s3-us-west-1.amazonaws.com/plotly-tutorials/assets/css/api/main.css
+# ---
+# Assets
+# ---
+  imgurl: https://images.plot.ly/plotly-documentation/
+  stylesheet: http://api.plotly.dev/styles/main.css
+  plotlyjs_download_url: https://cdn.plot.ly/plotly-latest.min.js
 
-exclude: [_posts/temp, '*.Rmd',]
-imgurl: https://images.plot.ly/plotly-documentation/
+# ---
+# Excludes
+# ---
+#  exclude: ['*.Rmd','_posts/2015-09-09-matlab-reference.html','_posts/2015-09-06-r-reference.html','_posts/2015-09-06-python-reference.html','_posts/2015-08-19-plotly_js-reference.html','_posts/2015-04-05-ggplot2-index.html','_posts/2015-04-05-julia-index.html','_posts/2015-04-05-matlab-index.html','_posts/2015-04-05-matplotlib-index.html','_posts/2015-04-05-node_js-index.html','_posts/2015-04-05-plotly_js-index.html','_posts/2015-04-05-plotlyjs-function-reference.md','_posts/2015-04-05-python-index.html','_posts/2015-05-25-ipython-notebooks_gallery.html','_posts/2015-05-25-ipython-notebooks_index.html','_posts/2015-07-13-eula_index.html','_posts/2015-07-19-pandas.html','_posts/2015-07-26-index.html','_posts/2015-07-30-r-index.Rmd','_posts/2015-07-30-r-index.md','_posts/2015-08-20-research-box-index.html','_posts/ggplot2','_posts/julia','_posts/matlab','_posts/matplotlib','_posts/nodejs','_posts/pandas','_posts/plotly_js','_posts/python','_posts/r','_posts/tutorials','_posts/user_guide_matlab','_posts/user_guide_python']
 
-plotlyjs_download_url: https://cdn.plot.ly/plotly-latest.min.js
 
-kramdown:
-  input: GFM
-markdown: redcarpet
-redcarpet:
-  extensions: ["tables", "fenced_code_blocks"]
+# ---
+# Markdown / Syntax
+# ---
+  kramdown:
+    input: GFM
+  markdown: redcarpet
+  redcarpet:
+    extensions: ["tables", "fenced_code_blocks"]
