--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # Assets
 # ---
   imgurl: https://images.plot.ly/plotly-documentation/
-  stylesheet: http://api.plotly.dev/styles/main.css
+  stylesheet: https://s3-us-west-1.amazonaws.com/plotly-tutorials/assets/css/api/main.css
   plotlyjs_download_url: https://cdn.plot.ly/plotly-latest.min.js
 
 # ---
