--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@ staticurl: https://plot.ly/gh-pages/documentation/static/
 # Assets
 # ---
 imgurl: https://images.plot.ly/plotly-documentation/
-stylesheet: https://s3-us-west-1.amazonaws.com/plotly-tutorials/assets/css/api/main.css
+# RM to use style sheet in /all_static
+# stylesheet: https://s3-us-west-1.amazonaws.com/plotly-tutorials/assets/css/api/main.css
 plotlyjs_download_url: https://cdn.plot.ly/plotly-latest.min.js
 
 
