--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -8,10 +8,12 @@ gems:
 url: http://localhost:4000
 BASE_URL: http://localhost:4000
 staticurl: http://localhost:4000/all_static
+staticurl: https://plot.ly/gh-pages/documentation/static/
 imgurl: https://images.plot.ly/plotly-documentation/
 #stylesheet: /styles/main.css
 plotlyjs_download_url: https://cdn.plot.ly/plotly-latest.min.js
 
+stylesheet: https://s3-us-west-1.amazonaws.com/plotly-tutorials/assets/css/api/main.css
 
 # ---
 # Excludes
